src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Playwrite BR';
  src: url('/fonts/PlaywriteBR.ttf') format('truetype'); /* Update the path as necessary */
  font-weight: normal;
  font-style: normal;
}

/* Global Styles */
html {
  @apply scroll-smooth text-zinc-200 selection:bg-gray-800;
}

section {
  @apply flex items-center scroll-mt-16;
}

section .header {
  @apply w-fit mx-auto mb-12 px-3 py-2 rounded-md text-3xl lg:text-4xl font-bold border-b border-zinc-700
}

.background {
  background-color: black;
  background-image: 
    radial-gradient(circle at 20% 30%, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0) 50%),
    radial-gradient(circle at 70% 80%, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0) 50%),
    radial-gradient(circle at 40% 60%, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0) 50%);
  background-size: cover;
  background-repeat: no-repeat; 
  margin: 0;
}

/* Navbar Styles */
nav {
  @apply transition-transform duration-500 shadow-md;
}

nav.show {
  @apply translate-y-0;
}

nav#mobile.show {
  @apply translate-y-16;
}

nav:not(.show) {
  @apply -translate-y-full;
}

.menu-icon {
  @apply p-3 rounded-lg border border-zinc-700 text-zinc-400 cursor-pointer md:hover:bg-zinc-800;
}

/* Navlink Styles */
.navlink {
  @apply px-3 py-1 rounded-md transition-colors border-b border-transparent;
}

.navlink.active {
  @apply text-zinc-100 border-b border-zinc-700;
}

.navlink:not(.active):hover {
  @apply text-zinc-300 bg-zinc-800;
}

/* Mobile Navlink Styles */
.m-navlink {
  @apply px-5 py-2 rounded-md transition-colors;
}

.m-navlink.active {
  @apply bg-zinc-800;
}

.m-navlink:not(.active):hover {
  @apply text-zinc-300 bg-zinc-800;
}

/* Button Styles */
.btn {
  @apply text-sm md:text-base font-semibold px-5 py-2 rounded-lg transition-colors text-center;
}

.btn-primary {
  @apply bg-zinc-700 md:hover:bg-zinc-800;
}

.btn-outline {
  @apply border border-zinc-600 md:hover:bg-zinc-800;
}

.btn-icon {
  @apply flex items-center gap-3 px-3;
}

.btn-icon .icon {
  @apply scale-125;
}

.btn-icon .text {
  @apply hidden md:block;
}

/* Container Styles */
.container {
  @apply mx-auto w-[90vw] md:w-[80vw];
}

/* Mobile Menu Styles */
.mobile-menu {
  @apply container flex flex-col gap-3 py-5 text;
}

/* Projects section styles */
.project-card {
  @apply overflow-hidden rounded-xl transition-all duration-300 sm:hover:-translate-y-1 hover:cursor-pointer border border-zinc-800 hover:border-zinc-600 bg-zinc-900;
}

